[package]
name = "fontgen"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["phf/default"]
codegen = ["std"]

[workspace]
members = ["test/build-single"]

[dependencies]
phf = { version = "0.11.2", default-features = false }
phf_codegen = "0.11.2"
phf_shared = "0.11.2"
bdf = "0.6.0"