[package]
name = "fontgen"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["phf/default", "phf_shared/default", "dep:phf_codegen"]
codegen = ["std","dep:bdf"]

[workspace]
members = ["test/build-single"]

[dependencies]
phf = { version = "0.11.2", default-features = false }
phf_codegen = { version = "0.11.2", optional = true }
phf_shared = { version = "0.11.2", default-features = false }
bdf = { version = "0.6.0", optional = true }